--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -1,16 +1,20 @@
 ---
-
 ---
+
+import Tokens from "../content/tokens.md";
 import Layout from "../layouts/Layout.astro";
+import Prose from "../layouts/Prose.astro";
 
 <Layout title="Vivi Lang">
-	<main class="my-4">
-		<div class="text-center">
-			<h1
-				class="font-extrabold text-center text-transparent text-6xl bg-clip-text bg-gradient-to-r from-purple-500 to-blue-400"
-			>
-				Vivi Lang
-			</h1>
-		</div>
-	</main>
+  <Prose>
+      <main class="px-4">
+        <div class="flex items-center text-center flex-col">
+          <h1 class="font-extrabold text-center text-transparent text-6xl bg-clip-text bg-gradient-to-r from-purple-500 to-blue-400">
+            Vivi Lang
+          </h1>
+        </div>
+        <Tokens />
+      
+      </main>
+  </Prose>
 </Layout>
