--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -1,6 +1,7 @@
 ---
 ---
 
+import { GrammarTables } from "../content/GrammarTables";
 import Tokens from "../content/tokens.md";
 import Layout from "../layouts/Layout.astro";
 import Prose from "../layouts/Prose.astro";
@@ -14,7 +15,8 @@ import Prose from "../layouts/Prose.astro";
           </h1>
         </div>
         <Tokens />
-      
+        <GrammarTables />
       </main>
+
   </Prose>
 </Layout>
