:sparkles: Feat(documentation): add first follow auto generate

--- a/packages/documentation/contents/docs/compiler/generate-first-follow.mdx
+++ b/packages/documentation/contents/docs/compiler/generate-first-follow.mdx
@@ -296,3 +296,9 @@ new Map([
   ],
 ]);
 ```
+
+## First Follow e Tabela Sintática
+
+Os dados abaixo foram gerados automaticamente a partir da gramática LL(1) fornecida.
+
+<GenerateFirstFollow />
