:bug: Fix(symbols table): portugues correctly texts

--- a/packages/documentation/contents/docs/getting-started/symbols-table.mdx
+++ b/packages/documentation/contents/docs/getting-started/symbols-table.mdx
@@ -19,7 +19,7 @@ description: Tabela de símbolos utilizada para a construção da vivi lang.
   <TableBody>
     <TableRow>
       <TableCell>letter</TableCell>
-      <TableCell>Composto por qualquer letra minuscula ou maiuscula de a até z</TableCell>
+      <TableCell>Composto por qualquer letra minúscula ou maiúscula de a até z</TableCell>
       <TableCell>a, b, c, d, e, f, A, B, C, D, E, F</TableCell>
       <TableCell>/[a-zA-Z]/</TableCell>
       <TableCell>Letra</TableCell>
@@ -30,7 +30,7 @@ description: Tabela de símbolos utilizada para a construção da vivi lang.
       <TableCell>Composto por número de 0 a 9</TableCell>
       <TableCell>0, 1, 2, 3, 4, 5, 6, 7, 8, 9</TableCell>
       <TableCell>/\d/</TableCell>
-      <TableCell>Digito</TableCell>
+      <TableCell>Dígito</TableCell>
     </TableRow>
 
     <TableRow>
