:bug: Fix: example

--- a/packages/docs/contents/docs/getting-started/examples.mdx
+++ b/packages/docs/contents/docs/getting-started/examples.mdx
@@ -10,7 +10,7 @@ Mais exemplos como os citados podem ser encontrados nos testes feitos do parser 
 
 ```tsx
 $<vivi>
-  print("Hello World");
+  print(name);
 $</vivi>
 ```
 
